# VertSys

./: .gitignore  CMakeLists.txt  GPLv3  LICENSE  README.md  main.cpp  mainwindow.h
scripts/: .createIconInUbuntuDesktop.sh.un~  createIconInUbuntuDesktop.sh
src/: buttonbox.cpp  buttonbox.h  climber.cpp  climber.h  climbermodel.cpp  climbermodel.h  dateformatdelegate.cpp  dateformatdelegate.h  datesortfilterproxymodel.cpp  datesortfilterproxymodel.h  dbmanager.cpp  dbmanager.h  edituser.cpp  edituser.h  edituser.ui  emailvalidator.cpp  emailvalidator.h  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h  payment.cpp  payment.h  payment.ui  paymentmodel.cpp  paymentmodel.h  paymentwindow.cpp  paymentwindow.h  phonevalidator.cpp  phonevalidator.h  registeruser.cpp  registeruser.h  registeruser.ui  report.ui  reportwindow.cpp  reportwindow.h  tabwidget.cpp  (+5 more)
vertsys/: mainwindow.cpp  model.cpp  model.h  registeruser.h  vertsys.pro
